fix exit code cutting off output occasionally
bottom margin was dipping into the line below and output text that
stretched across would get sent the the next line. removing the bottom
margin from the exit code prevents this. the bottom margin isn't needed
on the exit code, so nothing lost.

--- a/css/inner/builds.less
+++ b/css/inner/builds.less
@@ -27,7 +27,7 @@
   overflow: hidden;
   width: 100%;
   .pull-right {
-    margin: 1em;
+    margin: 1em 1em 0 1em;
     color: @grayLightest;
   }
   #build-messages {
